# cuda_test

./: CMakeLists.txt  README.md  main.cpp  rgba_to_grey.cu  rgba_to_grey.cuh  test.cu  test.cuh  test_config.h  test_cpu_openmp.cpp  test_gauss_filter.cpp  test_hello.cpp  utils.h
cuda_src/: blur.cu  blur.cuh
utils/: utils.h
